[fix]: horizontal scroll in pages

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,7 @@
     background: url(https://hotstar-88d5e.web.app/static/media/login-background.05b1a1b3.jpg) ;
     background-repeat:  no-repeat;
     background-size: cover;
-    width: 100vw;
     height: 100vh;
-  
-    
+   
   }
 
