--- a/src/containers/User/Login/Login.css
+++ b/src/containers/User/Login/Login.css
@@ -11,7 +11,6 @@
   align-items: center;
   flex-direction: column;
   margin: auto;
-  width: 100vw;
   height: 90vh;
 
 }
@@ -28,7 +27,7 @@
   align-items: center;
   flex-direction: column;
   margin: auto;
-  width: 100vw;
+  width: 100%;
   height: 90vh;
 
 }
