--- a/src/containers/User/Register/Register.css
+++ b/src/containers/User/Register/Register.css
@@ -7,7 +7,6 @@ body {
   background: url(https://hotstar-88d5e.web.app/static/media/login-background.05b1a1b3.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
   height: 100vh;
 }
 
@@ -19,7 +18,6 @@ body {
     align-items: center;
     flex-direction: column;
     margin: auto;
-    width: 100vw;
     height: 90vh;
 }
 
